--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,66 @@
+@import url("https://fonts.googleapis.com/css2?family=Questrial&display=swap");
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
 .navbar {
   display: flex;
   justify-content: space-around;
+}
+
+.footer {
+  font-family: "Questrial", serif;
+  background-color: #272727;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 30%;
+  display: grid;
+  grid-template-columns: 20% 15% 30% 75%;
+  justify-content: space-between;
+  padding: 80px 50px;
+}
+.footer h3 {
+  color: #ffffff;
+  margin-bottom: 20px;
+  font-weight: 900;
+}
+.footer li {
+  color: #6d6d6d;
+  list-style: none;
+  margin-bottom: 10px;
+}
+
+.newsletter {
+  width: 40%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.newsletter input {
+  background-color: #333333;
+  border: 1px solid #707070;
+  color: #bdbdbd;
+  width: 400px;
+  border-radius: 10px;
+  padding: 10px 30px;
+  font-weight: 800;
+  margin-bottom: 20px;
+}
+
+.social-networks {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.social-networks ul {
+  display: flex;
+}
+.social-networks ul li {
+  justify-content: space-between;
+}
+.social-networks h3 {
+  margin: 20 auto;
 }/*# sourceMappingURL=index.css.map */
