--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -2,59 +2,104 @@
 
 .footer {
   font-family: "Questrial", serif;
-  background-color: #272727;
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 30%;
-  display: grid;
-  grid-template-columns: 20% 15% 30% 75%;
-  justify-content: space-between;
-  padding: 80px 50px;
 
-  h3 {
+  & .footer-top {
+    background-color: #272727;
+    // height: 30%;
+    display: grid;
+    grid-template-columns: 20% 15% 30% 75%;
+    justify-content: space-between;
+    padding: 80px 50px 30px 50px;
+
+    & li {
+      color: #6d6d6d;
+      list-style: none;
+      margin-bottom: 10px;
+      cursor: pointer;
+    }
+  }
+
+  & h3 {
     color: #ffffff;
     margin-bottom: 20px;
     font-weight: 900;
   }
 
-  li {
-    color: #6d6d6d;
-    list-style: none;
-    margin-bottom: 10px;
-  }
-}
-
-.newsletter {
-  width: 40%;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  input {
-    background-color: #333333;
-    border: 1px solid #707070;
-    color: #bdbdbd;
-    width: 400px;
-    border-radius: 10px;
-    padding: 10px 30px;
-    font-weight: 800;
-    margin-bottom: 20px;
-  }
-}
-
-.social-networks {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-
-  ul {
+  .newsletter {
+    width: 40%;
     display: flex;
-    li {
-      justify-content: space-between;
+    flex-direction: column;
+    align-items: center;
+
+    input {
+      background-color: #333333;
+      border: 1px solid #707070;
+      color: #bdbdbd;
+      width: 400px;
+      border-radius: 10px;
+      padding: 10px 30px;
+      font-weight: 800;
+      margin-bottom: 20px;
     }
   }
-  h3 {
-    margin: 20 auto;
+
+  .social-networks {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+    ul {
+      display: flex;
+      li {
+        justify-content: space-between;
+      }
+    }
+    h3 {
+      margin: 20 auto;
+    }
+    h2 {
+      margin-top: 50px;
+      font-size: 2rem;
+      color: #ffffff;
+    }
+    p {
+      font-weight: 700;
+      color: #707070;
+    }
+  }
+
+  button {
+    padding: 10px 80px;
+    background-color: #ffffff;
+    border-radius: 10px;
+    border: none;
+    cursor: pointer;
+    font-weight: 600;
+  }
+
+  .footer-low {
+    background-color: #333333;
+    color: #848484;
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+
+    .rgpd {
+      width: 35%;
+      margin: 15px 20px;
+    }
+
+    .rgpd ul {
+      display: flex;
+      justify-content: space-around;
+      list-style: none;
+
+      & li {
+        cursor: pointer;
+      }
+    }
   }
 }
