--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,34 +12,35 @@
 
 .footer {
   font-family: "Questrial", serif;
-  background-color: #272727;
   position: absolute;
   bottom: 0;
   width: 100%;
-  height: 30%;
+}
+.footer .footer-top {
+  background-color: #272727;
   display: grid;
   grid-template-columns: 20% 15% 30% 75%;
   justify-content: space-between;
-  padding: 80px 50px;
+  padding: 80px 50px 30px 50px;
+}
+.footer .footer-top li {
+  color: #6d6d6d;
+  list-style: none;
+  margin-bottom: 10px;
+  cursor: pointer;
 }
 .footer h3 {
   color: #ffffff;
   margin-bottom: 20px;
   font-weight: 900;
 }
-.footer li {
-  color: #6d6d6d;
-  list-style: none;
-  margin-bottom: 10px;
-}
-
-.newsletter {
+.footer .newsletter {
   width: 40%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.newsletter input {
+.footer .newsletter input {
   background-color: #333333;
   border: 1px solid #707070;
   color: #bdbdbd;
@@ -49,18 +50,53 @@
   font-weight: 800;
   margin-bottom: 20px;
 }
-
-.social-networks {
+.footer .social-networks {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.social-networks ul {
+.footer .social-networks ul {
   display: flex;
 }
-.social-networks ul li {
+.footer .social-networks ul li {
   justify-content: space-between;
 }
-.social-networks h3 {
+.footer .social-networks h3 {
   margin: 20 auto;
+}
+.footer .social-networks h2 {
+  margin-top: 50px;
+  font-size: 2rem;
+  color: #ffffff;
+}
+.footer .social-networks p {
+  font-weight: 700;
+  color: #707070;
+}
+.footer button {
+  padding: 10px 80px;
+  background-color: #ffffff;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+  font-weight: 600;
+}
+.footer .footer-low {
+  background-color: #333333;
+  color: #848484;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.footer .footer-low .rgpd {
+  width: 35%;
+  margin: 15px 20px;
+}
+.footer .footer-low .rgpd ul {
+  display: flex;
+  justify-content: space-around;
+  list-style: none;
+}
+.footer .footer-low .rgpd ul li {
+  cursor: pointer;
 }/*# sourceMappingURL=index.css.map */
