--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Questrial&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Questrial&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -8,6 +9,7 @@
 .navbar {
   display: flex;
   justify-content: space-around;
+  height: 10vh;
 }
 
 .footer {
@@ -99,4 +101,169 @@
 }
 .footer .footer-low .rgpd ul li {
   cursor: pointer;
+}
+
+.signin {
+  background-color: #272727;
+  height: 90vh;
+}
+.signin .signin-form {
+  font-family: "Questrial", serif;
+  background-color: #272727;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+.signin .signin-form .logo {
+  width: 50px;
+  margin-bottom: 30px;
+}
+.signin .signin-form p {
+  color: #5f5f5f;
+  font-weight: 700;
+}
+.signin .signin-form .to-signup {
+  display: flex;
+  margin-bottom: 30px;
+}
+.signin .signin-form .to-signup a {
+  margin-left: 10px;
+  text-decoration: none;
+  color: aliceblue;
+  cursor: pointer;
+}
+.signin .signin-form form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.signin .signin-form form input {
+  margin-bottom: 20px;
+  width: 400px;
+  padding: 20px;
+  border-radius: 15px;
+  border: 1px solid #707070;
+  background-color: #333333;
+  color: #bdbdbd;
+  font-weight: 700;
+}
+.signin .signin-form form button {
+  width: 200px;
+  padding: 15px 0;
+  border-radius: 10px;
+  border: 1px solid #707070;
+  margin: 30px auto 50px auto;
+  cursor: pointer;
+}
+.signin .signin-form .connexion-with {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+.signin .signin-form .connexion-with .google-logo {
+  width: 40px;
+  cursor: pointer;
+  margin-bottom: 30px;
+}
+.signin .signin-form .separator {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #aaa;
+  width: 20%;
+  margin-bottom: 50px;
+}
+.signin .signin-form .separator::before, .signin .signin-form .separator::after {
+  content: "";
+  flex: 1;
+  border-bottom: 1px solid #707070; /* Couleur des lignes */
+  margin: 0 10px; /* Espacement entre le texte et les lignes */
+}
+
+.signup {
+  background-color: #272727;
+  height: 90vh;
+}
+.signup .signup-form {
+  font-family: "Questrial", serif;
+  background-color: #272727;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+}
+.signup .signup-form .logo {
+  width: 50px;
+  margin-bottom: 30px;
+}
+.signup .signup-form p {
+  color: #5f5f5f;
+  font-weight: 700;
+}
+.signup .signup-form .to-signin {
+  display: flex;
+  margin-bottom: 30px;
+}
+.signup .signup-form .to-signin a {
+  margin-left: 10px;
+  text-decoration: none;
+  color: aliceblue;
+  cursor: pointer;
+}
+.signup .signup-form form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.signup .signup-form form input {
+  margin-bottom: 15px;
+  width: 400px;
+  padding: 20px;
+  border-radius: 15px;
+  border: 1px solid #707070;
+  background-color: #333333;
+  color: #bdbdbd;
+  font-weight: 700;
+}
+.signup .signup-form form button {
+  width: 200px;
+  padding: 15px 0;
+  border-radius: 10px;
+  border: 1px solid #707070;
+  margin: 30px auto 30px auto;
+  cursor: pointer;
+}
+.signup .signup-form form .validation {
+  color: #983c3c;
+}
+.signup .signup-form .connexion-with {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 100%;
+}
+.signup .signup-form .connexion-with .google-logo {
+  width: 40px;
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+.signup .signup-form .separator {
+  display: flex;
+  align-items: center;
+  text-align: center;
+  color: #aaa;
+  width: 20%;
+  margin-bottom: 30px;
+}
+.signup .signup-form .separator::before, .signup .signup-form .separator::after {
+  content: "";
+  flex: 1;
+  border-bottom: 1px solid #707070; /* Couleur des lignes */
+  margin: 0 10px; /* Espacement entre le texte et les lignes */
 }/*# sourceMappingURL=index.css.map */
