--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,3 +2,5 @@
 @import "./components/navbar";
 @import "./components/footer";
 @import "./pages/home";
+@import "./pages/signin";
+@import "./pages/signup";
