--- a/src/styles/pages/_signin.scss
+++ b/src/styles/pages/_signin.scss
@@ -26,7 +26,7 @@
       display: flex;
       margin-bottom: 30px;
 
-      & a {
+      & .navigate {
         margin-left: 10px;
         text-decoration: none;
         color: aliceblue;
