--- a/src/styles/pages/_signin.scss
+++ b/src/styles/pages/_signin.scss
@@ -58,6 +58,9 @@
         margin: 30px auto 50px auto;
         cursor: pointer;
       }
+      & .validation {
+        color: #983c3c;
+      }
     }
 
     & .connexion-with {
