--- a/src/styles/pages/_annoncements.scss
+++ b/src/styles/pages/_annoncements.scss
@@ -82,9 +82,9 @@
               &.active {
                 border: none;
                 background: rgba(255, 255, 255, 0.7);
-                
+
                 &::after {
-                  content: '✓';
+                  content: "✓";
                   display: block;
                   color: rgba(26, 26, 26, 0.8);
                   font-size: 12px;
@@ -112,7 +112,8 @@
             cursor: pointer;
             transition: all 0.3s ease;
 
-            &:hover, &.active {
+            &:hover,
+            &.active {
               background: rgba(255, 255, 255, 0.1);
               color: white;
               border-color: rgba(255, 255, 255, 0.4);
@@ -167,8 +168,13 @@
       padding: 10px;
 
       .announcement-card {
+        max-height: 300px;
         width: 100%;
-        background: linear-gradient(145deg, rgba(40, 40, 40, 0.95), rgba(30, 30, 30, 0.95));
+        background: linear-gradient(
+          145deg,
+          rgba(40, 40, 40, 0.95),
+          rgba(30, 30, 30, 0.95)
+        );
         border-radius: 15px;
         padding: 25px;
         cursor: pointer;
@@ -192,18 +198,28 @@
               font-size: 1.8rem;
               font-weight: 600;
               text-transform: uppercase;
-              margin-bottom: 15px;
               letter-spacing: 1px;
             }
-
-            }
           }
+        }
+
+        .categorie {
+          margin-bottom: 15px;
+          border: 1px solid rgba(255, 255, 255, 0.2);
+          width: fit-content;
+          padding: 5px 10px;
+          border-radius: 20px;
+          background-color: rgba(255, 255, 255, 0.17);
+          color: rgba(255, 255, 255, 0.7);
+        }
 
         .description {
           color: rgba(255, 255, 255, 0.7);
           line-height: 1.6;
           margin-bottom: 20px;
-          max-width: 80%;
+          max-width: 50%;
+          max-height: 150px;
+          overflow: hidden;
         }
 
         .card-footer {
