--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -1,6 +1,7 @@
 @import "./settings";
 @import "./components/navbar";
 @import "./components/footer";
+@import "./components/themetoggle";
 @import "./pages/home";
 @import "./pages/signin";
 @import "./pages/signup";
