--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -7,3 +7,4 @@
 @import "./pages/signup";
 @import "./pages/annoncements";
 @import "./pages/userForm";
+@import "./pages/private/_userprofil.scss";
