--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -2,6 +2,7 @@
 @import "./components/navbar";
 @import "./components/footer";
 @import "./components/themetoggle";
+@import "./components/colorbtn";
 @import "./pages/home";
 @import "./pages/signin";
 @import "./pages/signup";
