--- a/src/styles/components/_navbar.scss
+++ b/src/styles/components/_navbar.scss
@@ -4,6 +4,7 @@
 }
 
 .nav {
+  height: 10vh;
   background-color: rgba(26, 26, 26, 0.8);
   backdrop-filter: blur(10px);
   display: flex;
@@ -20,14 +21,14 @@
 
   /* Classe spéciale pour la page d'accueil */
   &.home-nav {
-    top: 40px;
+    // top: 40px;
     background-color: transparent;
   }
 
   .nav-left {
     display: flex;
     align-items: center;
-    
+
     .logo-img {
       height: 15px;
       width: auto;
@@ -52,75 +53,25 @@
     color: white;
     text-decoration: none;
     transition: color 0.3s ease;
-    
+
     &:hover {
       color: rgba(255, 255, 255, 0.7);
     }
   }
-  
 
-  .connect-btn, .signup-btn, .logout-btn {
+  .connect-btn,
+  .logout-btn {
     padding: 8px 20px;
     border-radius: 5px;
     transition: all 0.3s ease;
-    
   }
-  
-  .signup-btn {
-    background: #161616;
-    position: relative;
-    border: 1px solid transparent;
-    background-clip: padding-box;
-    
-    /* bordure bouton dégradé */
-    &::after {
-      content: '';
-      position: absolute;
-      top: -1px;
-      left: -1px;
-      right: -1px;
-      bottom: -1px;
-      z-index: -2;
-      border-radius: 5px;
-      background: linear-gradient(45deg, #8a2be2, #9370db, #ff69b4, #8a2be2);
-    }
-    
-    &:hover {
-      background: #3a1545;
-    }
-    
-    /* halo bouton */
-    &::before {
-      content: '';
-      position: absolute;
-      top: -6px;
-      left: -6px;
-      right: -6px;
-      bottom: -6px;
-      z-index: -3;
-      border-radius: 10px;
-      background: linear-gradient(45deg, #8a2be2, #9370db, #ff69b4, #8a2be2);
-      filter: blur(15px);
-      opacity: 0.8;
-      transition: all 0.3s ease;
-    }
-    
-    &:hover::before {
-      opacity: 1;
-      top: -8px;
-      left: -8px;
-      right: -8px;
-      bottom: -8px;
-      filter: blur(18px);
-    }
-  }
-  
+
   .logout-btn {
     background: transparent;
     border: 1px solid rgba(255, 255, 255, 0.3);
     color: white;
     cursor: pointer;
-    
+
     &:hover {
       background: rgba(255, 255, 255, 0.1);
     }
@@ -130,7 +81,7 @@
 @media (max-width: 900px) {
   .nav {
     padding: 0 20px;
-    
+
     .nav-center {
       gap: 15px;
     }
@@ -144,4 +95,3 @@
     }
   }
 }
-
