--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -359,6 +359,7 @@
   display: flex;
   text-align: center;
   align-items: center;
+  z-index: 100;
 }
 .home-page .home-description .home-description-text {
   display: flex;
