--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -7,6 +7,40 @@
   display: flex;
   flex-direction: column;
 
+  .scroll-indicator {
+    position: absolute;
+    bottom: 30px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+
+    p {
+      font-size: 14px;
+      opacity: 0.5;
+      margin-bottom: 5px;
+    }
+
+    .double-arrow {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      animation: slide-down 1.5s ease-in-out infinite;
+      cursor: pointer;
+
+      .arrow {
+        font-size: 24px;
+        display: block;
+        margin: 0;
+        padding: 0;
+
+        &:first-child {
+          margin-bottom: -18px;
+        }
+      }
+    }
+  }
+
   .hero-section {
     display: flex;
     flex-direction: column;
@@ -36,39 +70,6 @@
       margin-top: -40px;
       text-align: center;
     }
-
-    .scroll-indicator {
-      position: absolute;
-      bottom: 30px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      width: 100%;
-
-      p {
-        font-size: 14px;
-        opacity: 0.5;
-        margin-bottom: 5px;
-      }
-
-      .double-arrow {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        animation: slide-down 1.5s ease-in-out infinite;
-
-        .arrow {
-          font-size: 24px;
-          display: block;
-          margin: 0;
-          padding: 0;
-
-          &:first-child {
-            margin-bottom: -18px;
-          }
-        }
-      }
-    }
   }
 
   .home-description {
@@ -76,6 +77,8 @@
     display: flex;
     text-align: center;
     align-items: center;
+    z-index: 1;
+    // margin-bottom: 50vh;
 
     .home-description-text {
       display: flex;
@@ -86,13 +89,24 @@
       p {
         margin-bottom: 20px;
         color: #b9b9b9;
+        letter-spacing: 2px;
 
         strong {
           font-weight: 900;
           color: #ffffff;
         }
       }
+      a {
+        width: 250px;
+        margin: 0 auto;
+        color: #ffffff;
+        text-decoration: none;
+        margin-top: 40px;
+      }
     }
+  }
+
+  .categories-carrousel {
   }
 }
 
