style on logout button + general background

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,7 +1,7 @@
 .home-page {
   // height: 100vh;
   min-height: 100vh;
-  background-color: #1a1a1a;
+  background-color: #0c0c0c;
   color: white;
   position: relative;
   display: flex;
