--- a/src/styles/components/_colorbtn.scss
+++ b/src/styles/components/_colorbtn.scss
@@ -6,6 +6,8 @@
   padding: 8px 20px;
   border-radius: 5px;
   transition: all 0.3s ease;
+  color: white;
+  cursor: pointer;
 
   /* bordure bouton dégradé */
   &::after {
