--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -107,6 +107,54 @@
   }
 
   .categories-carrousel {
+    margin-top: 50px;
+    padding: 20px;
+
+    .categories-carrousel-text {
+      text-align: center;
+      margin-bottom: 20px;
+
+      h2 {
+        font-size: 24px;
+        margin-bottom: 10px;
+      }
+
+      p {
+        font-size: 16px;
+        color: #b9b9b9;
+      }
+    }
+
+    .swiper {
+      width: 100%;
+      padding: 20px 0;
+
+      .swiper-slide {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .card {
+          background: #232323;
+          border-radius: 10px;
+          padding: 20px;
+          text-align: center;
+          box-shadow: 0 4px 6px rgba(0, 0, 0, 0.2);
+
+          img {
+            width: 100px;
+            height: 100px;
+            margin-bottom: 10px;
+          }
+
+          p {
+            color: white;
+            font-size: 16px;
+            margin: 0;
+          }
+        }
+      }
+    }
   }
 }
 
